--- a/src/components/Home/style.module.css
+++ b/src/components/Home/style.module.css
@@ -44,7 +44,7 @@
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	/* display: none; */
+	display: none;
 	max-height: 15em;
 	overflow-y: auto;
 	border: 0.05em solid #777;
@@ -52,7 +52,22 @@
 	width: 100%;
 	left: 0;
 	top: calc(100% + 0.25em);
+	background-color: white;
+	z-index: 100;
 }
 .options.show {
 	display: block;
+}
+
+.option {
+	padding: 0.25em 0.5em;
+	cursor: pointer;
+}
+
+.option.highlighted {
+	background-color: hsl(200, 100%, 50%);
+	color: white;
+}
+.option.selected {
+	background-color: hsl(200, 100%, 70%);
 }
